@@ -34,7 +34,7 @@
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
  */
 
-require_once('www/include/BaseLanguage.class.php');
+require_once('common/include/gettext.php');
 
 $GROUP_OBJ=array();
 
