@@ -10,7 +10,7 @@ require_once('../../env.inc.php');
 require_once('pre.php');
 require_once('common/include/account.php');
 require_once('www/admin/admin_utils.php');
-require_once('www/include/BaseLanguage.class.php');
+require_once('common/include/gettext.php');
 
 session_require(array('group'=>'1','admin_flags'=>'A'));
 
